@@ -8,7 +8,7 @@
 - Feature: Better detection of article-style pages use META tags
 - Feature: Detect RSS/Atom feeds and use those for making list of links
 - Feature: Add TABLE tag support
-- Fixed: Remove SVG so there internal text like titles don't appear in content links
+- Fixed: Remove SVG so their internal text like titles don't appear in content links
 - Feature: Switching between modes
 - Feature: Site name in title
 - Fixed: Articles that passed readability still had no content
@@ -25,3 +25,4 @@
 - Fixed: Handle exceptions thrown from SmartReader
 - Fixed: Typo
 - Feature: Include Safari HTTP headers to more closely resemble a web browser
+- Fixed: If redirect(s) occurs, use final requested URL to resolve relative URLs in final response
